ChickenFingers: Added new features plus some esthetic changes.
- Aside from the speed, now the amount of letters increases with the level
  (maximum of four).
- Letter color changes when is almost at the bottom.
- Some color flashes when the player looses.

--- a/README
+++ b/README
@@ -4,6 +4,8 @@ first version just as a practice before doing more complex stuff.
 
 - Build instructions.
 make
+- To rebuild
+make clean
 
 - Run
 ./ChickenFinger
