ChickenFinger: Fix for race condition and added lives feature.
- There was a race condition when checking for the keys that sometimes prevented
  the keys to dissapear from the screen.
- Now if the player reaches 0 lives, the game ends.

--- a/README
+++ b/README
@@ -12,3 +12,4 @@ make clean
 
 - How to play.
 Just press the keys correspondent to the letters that are going down.
+Player looses if one letter reaches the bottom or if lives amount reaches 0.
